Fixed z-index on menu buttons

--- a/scss/components/_menu-button.scss
+++ b/scss/components/_menu-button.scss
@@ -4,6 +4,7 @@
   top: $margin-base;
   left: $margin-base;
   box-shadow: 0 0 5px $base-color;
+  z-index: 9000;
 }
 
 #menu-close {
