--- a/scss/layout/_nav-menu.scss
+++ b/scss/layout/_nav-menu.scss
@@ -7,8 +7,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 9999;
   transition: all $animation-time / 2 ease;
+  overflow-y: scroll;
 
   &.hidden {
     left: -75%;
